--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,7 +17,7 @@ jobs:
     if: ${{ ! contains(github.repository, 'python-template') }}
     runs-on: ubuntu-latest
     env:
-      PYTHONPATH: ${{ github.workspace }}:${{ github.workspace }}/mylib
+      PYTHONPATH: ${{ github.workspace }}:${{ github.workspace }}/app
     steps:
       - name: Checkout repository code
         uses: actions/checkout@v4
